feat: start clean learning sessions
